# is_my_site_up

./: .env  Cargo.toml  DESIGN.org  LICENSE  README.org  start_dev_db.sh  stop_dev_db.sh
migrations/2019-11-07-053647_urls/: up.sql
migrations/2019-11-07-063334_url_status/: down.sql  up.sql
src/: database.rs  fetching.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs  workers.rs
