[package]
name = "is-my-site-up"
version = "0.1.0"
authors = ["David Briggs <dpbriggs@edu.uwaterloo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "is_my_site_up"
path = "src/lib.rs"

[[bin]]
name = "imsu_http_server"
path = "src/server.rs"

[[bin]]
name = "imsu_workers"
path = "src/workers.rs"

[dependencies]
reqwest = "0.9.22"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4.9", features = ["serde"] }
dotenv = "0.9.0"
serde_derive = "1.0.102"
serde = "1.0.102"
rocket = "0.4.2"
lazy_static = "1.4.0"
rocket_contrib = "0.4.2"

